# tao

./: .clineignore  .gitignore  Cargo.toml  ENT_FRAMEWORK_IMPLEMENTATION.md  GEMINI.md  GENERATOR.md  MIGRATION_STATUS.md  README.md  TAO_ARCHITECTURE_ANALYSIS.md  TAO_ARCHITECTURE_GAPS.md  TAO_IMPLEMENTATION_STATUS.md  build.rs  docker-compose.yml
ai_docs/changelog/: 001_system_architecture_improvements.md  002_implement_unified_builder_pattern.md  003_refactor_directory_structure.md  004_refactor_entity_and_builder_interactions.md  005_implement_meta_viewer_context_pattern.md  006_implement_middleware_pattern_for_viewer_context.md  README.md  ergonomic_improvements_implemented.md
ai_docs/templates/: task_template.md
examples/: context_demo.rs  database_pool_demo.rs  entuser_demo.rs  id_generation_demo.rs  performance_demo.rs  production_tao_example.rs  simple_entuser_demo.rs  test_ents.rs  test_modular_codegen.rs  type_safety_demo.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
schemas/: ent_comment.thrift  ent_event.thrift  ent_group.thrift  ent_page.thrift  ent_post.thrift  ent_user.thrift
scripts/: build.sh  dev.sh  generate_entity.py  run_demo.sh  run_server.sh
src/: app_state.rs  cache.rs  config.rs  ent_codegen.rs  ent_hooks.rs  ent_privacy.rs  ent_schema.rs  error.rs  id_generator.rs  inverse_associations.rs  lib.rs  main.rs
src/codegen/: builder_generator.rs  ent_generator.rs  mod.rs  rust_generator.rs  thrift_generator.rs  utils.rs
src/core/: database.rs  inverse_associations.rs  mod.rs  strong_types.rs  thrift_utils.rs
src/data_seeder/: mod.rs
src/domains/: mod.rs  tao_core.rs  tao_core.thrift
src/ent_framework/: ent_builder.rs  ent_hooks.rs  ent_privacy.rs  ent_schema.rs  ent_trait.rs  mod.rs
static/: index.html
tests/: basic.rs
thrift/: ent_comment.thrift  ent_event.thrift  ent_group.thrift  ent_page.thrift  ent_post.thrift  ent_user.thrift  entity_methods.thrift  tao_core.thrift
(+130 files in other folders)
