[package]
name = "tao_database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
lru = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thrift = "0.17.0"

# Async runtime
tokio = { version = "1.0", features = ["full", "net"] }
futures = "0.3"

# Web server
axum = "0.8.4"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }

# SQLx async database with connection pooling
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "sqlite"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
regex = "1.10"

# Production-grade dependencies
bincode = "1.3"
once_cell = "1.21.3"
rand = "0.9.1"

[dev-dependencies]
tempfile = "3.3"

